K8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-review-app
  labels:
    app: book-review-app 
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: book-review-app
  template:
    metadata:
      labels:
        app: book-review-app
    spec:
      containers:
        - name: book-review-app
          image: suhasbt/book-review-app:v1
          ports:
            - containerPort: 5000
