K8s/manifests/service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: book-review-app-service
  labels:
    app: book-review-app  
spec:
  type: NodePort
  selector:
    app: book-review-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
