K8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-review-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /*
spec:
  ingressClassName: nginx
  rules:
  - host: book-review-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: book-review-app-service
            port:
              number: 80
